proxmox-ve-config/tests/fabric/snapshots/fabric__bgp_ipv6_only_pve1.snap
---
source: proxmox-ve-config/tests/fabric/main.rs
expression: output
---
!
router bgp 65002
 bgp router-id 6.76.48.142
 no bgp default ipv4-unicast
 neighbor test peer-group
 neighbor test remote-as external
 neighbor ens19 interface peer-group test
 !
 address-family ipv6 unicast
  network fd00:10::2/128
  neighbor test activate
  neighbor test soft-reconfiguration inbound
  neighbor test route-map pve_bgp6_test_in in
 exit-address-family
exit
!
ipv6 access-list pve_bgp_test_ip6s permit fd00:10::/64
!
route-map pve_bgp6 permit 100
 match ipv6 address pve_bgp_test_ip6s
 set src fd00:10::2
exit
!
route-map pve_bgp6 permit 65535
exit
!
route-map pve_bgp6_test_in permit 10
 match ipv6 address pve_bgp_test_ip6s
exit
!
!
ipv6 protocol bgp route-map pve_bgp6
