proxmox-ve-config/tests/fabric/snapshots/fabric__bgp_merge_with_evpn_pve.snap
---
source: proxmox-ve-config/tests/fabric/main.rs
expression: output
---
!
router bgp 65000
 bgp router-id 10.10.10.1
 no bgp default ipv4-unicast
 coalesce-time 1000
 neighbor test peer-group
 neighbor test remote-as external
 neighbor test local-as 65001 no-prepend replace-as
 neighbor ens18 interface peer-group test
 neighbor ens19 interface peer-group test
 !
 address-family ipv4 unicast
  network 10.10.10.1/32
  neighbor test activate
  neighbor test soft-reconfiguration inbound
  neighbor test route-map pve_bgp_test_in in
 exit-address-family
 !
 address-family l2vpn evpn
  advertise-all-vni
 exit-address-family
exit
!
access-list pve_bgp_test_ips permit 10.10.10.0/24
!
route-map pve_bgp permit 100
 match ip address pve_bgp_test_ips
 set src 10.10.10.1
exit
!
route-map pve_bgp permit 65535
exit
!
route-map pve_bgp_test_in permit 10
 match ip address pve_bgp_test_ips
exit
!
ip protocol bgp route-map pve_bgp
